<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
          
    <LinearLayout
        android:id="@+id/login_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/video_transcode_button"  
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/video_transcode"/> 

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/audio_transcode_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/audio_transcode"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/picture_transcode_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/picture_transcode"/>
    </LinearLayout>

</RelativeLayout>